# ROS2-Crazyflie2.1-Phasespace

./: README.md  launch_pid_optimization.yaml  test.py
flight_logs/session_20250901_181718/: exp_000_data.json  exp_000_report.md  exp_001_data.json  exp_001_report.md  exp_002_data.json  exp_002_report.md  exp_003_data.json  exp_003_report.md  experiments_summary.json  optimization_config.json  session_summary_20250901_181718.md
install/: local_setup.sh  setup.sh
install/bayes_opt_ros2/lib/bayes_opt_ros2/: ros2_bayes_opt_node.py
install/bayes_opt_ros2/share/bayes_opt_ros2/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/phasespace_client/lib/phasespace_client/: listener  phasespace_client_node
log/: latest_build
src/bayes_opt_ros2/config/: fast_pid_optimization_config.yaml  pid_payload_optimization.yaml  pid_water_mission_optimization_config.yaml
src/bayes_opt_ros2/launch/: pid_optimization.launch.py
src/bayes_opt_ros2/scripts/: fast_pid_experiment_client_og.py  integrated_water_mission_og.py  phasespace_wrapper.py
src/crazyflie_python/: mocap_hl_commander.py  phasespace_hl_commander_simple.py  transform_test.py
src/phasespace_ros_node-main 2/phasespace_ros_node-main/: README.md
src/phasespace_ros_node-main 2/phasespace_ros_node-main/phasespace_client/: CMakeLists.txt  README_PHASESPACE_CRAZYSWARM.md
src/phasespace_ros_node-main 2/phasespace_ros_node-main/phasespace_client/launch/: test_bridge.launch.py
src/phasespace_ros_node-main 2/phasespace_ros_node-main/phasespace_client/src/: listener.cpp  psnode.cpp
(+15 files in other folders)
